feat: 캐릭터 레벨 2 이미지 구현 (#105)